Bug 284331 - Plasma destop crash when trying to apply colour change
Summary: Plasma destop crash when trying to apply colour change
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-18 07:21 UTC by Jussi Kekkonen
Modified: 2023-11-27 17:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jussi Kekkonen 2011-10-18 07:21:03 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
Plasma desktop crashes when I do try change (one of) the colours of what is used for pattern background, after I exit from the colour dialog.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f9d820567a0 (LWP 2064))]

Thread 4 (Thread 0x7f9d62471700 (LWP 2065)):
#0  QTimerInfoList::repairTimersIfNeeded (this=0x2cb3040) at kernel/qeventdispatcher_unix.cpp:395
#1  0x00007f9d7eb34a51 in QTimerInfoList::timerWait (this=0x2cb3040, tm=...) at kernel/qeventdispatcher_unix.cpp:443
#2  0x00007f9d7eb3344c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f9d62470c1c) at kernel/qeventdispatcher_glib.cpp:136
#3  0x00007f9d7eb334f5 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#4  0x00007f9d75ecbff2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f9d75eccdfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f9d75ecd429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f9d7eb33f3e in QEventDispatcherGlib::processEvents (this=0x2cb2fc0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#8  0x00007f9d7eb07cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#9  0x00007f9d7eb07ef7 in QEventLoop::exec (this=0x7f9d62470db0, flags=...) at kernel/qeventloop.cpp:201
#10 0x00007f9d7ea1f27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#11 0x00007f9d7eaeacbf in QInotifyFileSystemWatcherEngine::run (this=0x2c73390) at io/qfilesystemwatcher_inotify.cpp:248
#12 0x00007f9d7ea21d05 in QThreadPrivate::start (arg=0x2c73390) at thread/qthread_unix.cpp:331
#13 0x00007f9d769d9efc in start_thread (arg=0x7f9d62471700) at pthread_create.c:304
#14 0x00007f9d8194d89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#15 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f9d5af39700 (LWP 2066)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007f9d5af38ad0 in ?? ()
#2  0x00007fff662c67e7 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 2 (Thread 0x7f9d552ec700 (LWP 2074)):
#0  0x00007f9d769dc034 in __pthread_mutex_lock (mutex=0x366c558) at pthread_mutex_lock.c:61
#1  0x00007f9d75ecc023 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9d75eccdfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9d75ecd792 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9d55dca516 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#5  0x00007f9d75ef22b6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f9d769d9efc in start_thread (arg=0x7f9d552ec700) at pthread_create.c:304
#7  0x00007f9d8194d89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f9d820567a0 (LWP 2064)):
[KCrash Handler]
#6  0x00007f9d4d222524 in ?? () from /usr/lib/kde4/plasma_wallpaper_pattern.so
#7  0x00007f9d4d222631 in ?? () from /usr/lib/kde4/plasma_wallpaper_pattern.so
#8  0x00007f9d7eb1beba in QMetaObject::activate (sender=0x335bd50, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff66223dc0) at kernel/qobject.cpp:3278
#9  0x00007f9d7f6ed292 in KColorButton::changed (this=<optimized out>, _t1=<optimized out>) at ./kcolorbutton.moc:131
#10 0x00007f9d7f6ed584 in KColorButton::KColorButtonPrivate::_k_chooseColor (this=0x4978300) at ../../kdeui/colors/kcolorbutton.cpp:254
#11 0x00007f9d7f6ed672 in KColorButton::qt_metacall (this=0x335bd50, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff66223f50) at ./kcolorbutton.moc:88
#12 0x00007f9d7eb1beba in QMetaObject::activate (sender=0x335bd50, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff66223f50) at kernel/qobject.cpp:3278
#13 0x00007f9d7e52a582 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#14 0x00007f9d7e27013e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#15 0x00007f9d7e27147b in QAbstractButtonPrivate::click (this=0x2ff7110) at widgets/qabstractbutton.cpp:539
#16 0x00007f9d7e2716ec in QAbstractButton::mouseReleaseEvent (this=0x335bd50, e=0x7fff66224660) at widgets/qabstractbutton.cpp:1121
#17 0x00007f9d7df09c9a in QWidget::event (this=0x335bd50, event=0x7fff66224660) at kernel/qwidget.cpp:8295
#18 0x00007f9d7deb9424 in notify_helper (e=0x7fff66224660, receiver=0x335bd50, this=0x20cb6a0) at kernel/qapplication.cpp:4486
#19 QApplicationPrivate::notify_helper (this=0x20cb6a0, receiver=0x335bd50, e=0x7fff66224660) at kernel/qapplication.cpp:4458
#20 0x00007f9d7debec6b in QApplication::notify (this=<optimized out>, receiver=0x335bd50, e=0x7fff66224660) at kernel/qapplication.cpp:4047
#21 0x00007f9d7f7b7126 in KApplication::notify (this=0x20be430, receiver=0x335bd50, event=0x7fff66224660) at ../../kdeui/kernel/kapplication.cpp:311
#22 0x00007f9d7eb08afc in QCoreApplication::notifyInternal (this=0x20be430, receiver=0x335bd50, event=0x7fff66224660) at kernel/qcoreapplication.cpp:787
#23 0x00007f9d7deba3f2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#24 QApplicationPrivate::sendMouseEvent (receiver=0x335bd50, event=0x7fff66224660, alienWidget=0x335bd50, nativeWidget=0x404cb30, buttonDown=0x335bd50, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#25 0x00007f9d7df39945 in QETWidget::translateMouseEvent (this=0x404cb30, event=<optimized out>) at kernel/qapplication_x11.cpp:4568
#26 0x00007f9d7df388be in QApplication::x11ProcessEvent (this=0x20be430, event=0x7fff66224e80) at kernel/qapplication_x11.cpp:3690
#27 0x00007f9d7df61412 in x11EventSourceDispatch (s=0x20c7bb0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0x00007f9d75ecca5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f9d75ecd258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f9d75ecd429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f9d7eb33ed6 in QEventDispatcherGlib::processEvents (this=0x204af40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#32 0x00007f9d7df6107e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f9d7eb07cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f9d7eb07ef7 in QEventLoop::exec (this=0x7fff66225250, flags=...) at kernel/qeventloop.cpp:201
#35 0x00007f9d7eb0c789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0x00007f9d81c4c1a3 in kdemain (argc=1, argv=0x7fff66225638) at ../../../../plasma/desktop/shell/main.cpp:120
#37 0x00007f9d8188d30d in __libc_start_main (main=0x400640 <main(int, char**)>, argc=1, ubp_av=0x7fff66225638, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff66225628) at libc-start.c:226
#38 0x0000000000400671 in _start ()

Reported using DrKonqi
Comment 1 Jussi Kekkonen 2011-10-18 07:30:49 UTC
Apparently crash does not occur when there is pattern selected.
Comment 2 Christoph Feck 2011-10-18 09:20:06 UTC
If this is reproducible, could you add a backtrace with kdeplasma-addons-dbg installed?
Comment 3 Jussi Kekkonen 2011-10-18 09:48:16 UTC
Reproducible, steps to reproduce:

1) Make sure there is no pattern already selected (in ~/.kde/share/config/plasma-desktop-appletsrc [Containments][1][Wallpaper][pattern] has no pattern= )

2) Go to Desktop Settings of Plasma Desktop -> View -> Wallpaper: Pattern

3) Do not select any pattern from the list available, do only try change one of the colours

4) Select some colour and exit the "Select colour" dialog by pressing ok.

5) Cräääsh

Trace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7ff46b5de7a0 (LWP 3114))]

Thread 5 (Thread 0x7ff44b9f9700 (LWP 3115)):
#0  0x00007ff46aec9773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007ff45f454f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff45f455429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff4680bbed6 in QEventDispatcherGlib::processEvents (this=0x14fc260, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#4  0x00007ff46808fcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ff46808fef7 in QEventLoop::exec (this=0x7ff44b9f8db0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007ff467fa727f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007ff468072cbf in QInotifyFileSystemWatcherEngine::run (this=0x14fd710) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007ff467fa9d05 in QThreadPrivate::start (arg=0x14fd710) at thread/qthread_unix.cpp:331
#9  0x00007ff45ff61efc in start_thread (arg=0x7ff44b9f9700) at pthread_create.c:304
#10 0x00007ff46aed589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7ff4445ee700 (LWP 3116)):
#0  0x00007ff46aec9773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007ff45f454f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff45f455429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff4680bbed6 in QEventDispatcherGlib::processEvents (this=0x181fc30, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#4  0x00007ff46808fcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ff46808fef7 in QEventLoop::exec (this=0x7ff4445eddb0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007ff467fa727f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007ff468072cbf in QInotifyFileSystemWatcherEngine::run (this=0x1693050) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007ff467fa9d05 in QThreadPrivate::start (arg=0x1693050) at thread/qthread_unix.cpp:331
#9  0x00007ff45ff61efc in start_thread (arg=0x7ff4445ee700) at pthread_create.c:304
#10 0x00007ff46aed589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7ff441ed7700 (LWP 3117)):
#0  0x00007ff46aece913 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007ff468072671 in QProcessManager::run (this=0x7ff4683c4580) at io/qprocess_unix.cpp:245
#2  0x00007ff467fa9d05 in QThreadPrivate::start (arg=0x7ff4683c4580) at thread/qthread_unix.cpp:331
#3  0x00007ff45ff61efc in start_thread (arg=0x7ff441ed7700) at pthread_create.c:304
#4  0x00007ff46aed589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7ff43e862700 (LWP 3121)):
#0  0x00007ff46aec9773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007ff45f454f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff45f455792 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff43f340516 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007ff45f47a2b6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff45ff61efc in start_thread (arg=0x7ff43e862700) at pthread_create.c:304
#6  0x00007ff46aed589d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ff46b5de7a0 (LWP 3114)):
[KCrash Handler]
#6  0x00007ff43cbf0524 in PatternWallpaper::widgetChanged (this=0x169c8e0) at ../../../wallpapers/pattern/pattern.cpp:188
#7  0x00007ff43cbf0631 in PatternWallpaper::qt_metacall (this=0x169c8e0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff26ee0030) at ./pattern.moc:79
#8  0x00007ff4680a3eba in QMetaObject::activate (sender=0x17f1720, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff26ee0030) at kernel/qobject.cpp:3278
#9  0x00007ff468c75292 in KColorButton::changed (this=<optimized out>, _t1=<optimized out>) at ./kcolorbutton.moc:131
#10 0x00007ff468c75584 in KColorButton::KColorButtonPrivate::_k_chooseColor (this=0x1eaf670) at ../../kdeui/colors/kcolorbutton.cpp:254
#11 0x00007ff468c75672 in KColorButton::qt_metacall (this=0x17f1720, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff26ee01c0) at ./kcolorbutton.moc:88
#12 0x00007ff4680a3eba in QMetaObject::activate (sender=0x17f1720, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff26ee01c0) at kernel/qobject.cpp:3278
#13 0x00007ff467ab2582 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#14 0x00007ff4677f813e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#15 0x00007ff4677f947b in QAbstractButtonPrivate::click (this=0x2682020) at widgets/qabstractbutton.cpp:539
#16 0x00007ff4677f96ec in QAbstractButton::mouseReleaseEvent (this=0x17f1720, e=0x7fff26ee08d0) at widgets/qabstractbutton.cpp:1121
#17 0x00007ff467491c9a in QWidget::event (this=0x17f1720, event=0x7fff26ee08d0) at kernel/qwidget.cpp:8295
#18 0x00007ff467441424 in notify_helper (e=0x7fff26ee08d0, receiver=0x17f1720, this=0x9423c0) at kernel/qapplication.cpp:4486
#19 QApplicationPrivate::notify_helper (this=0x9423c0, receiver=0x17f1720, e=0x7fff26ee08d0) at kernel/qapplication.cpp:4458
#20 0x00007ff467446c6b in QApplication::notify (this=<optimized out>, receiver=0x17f1720, e=0x7fff26ee08d0) at kernel/qapplication.cpp:4047
#21 0x00007ff468d3f126 in KApplication::notify (this=0x93b3d0, receiver=0x17f1720, event=0x7fff26ee08d0) at ../../kdeui/kernel/kapplication.cpp:311
#22 0x00007ff468090afc in QCoreApplication::notifyInternal (this=0x93b3d0, receiver=0x17f1720, event=0x7fff26ee08d0) at kernel/qcoreapplication.cpp:787
#23 0x00007ff4674423f2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#24 QApplicationPrivate::sendMouseEvent (receiver=0x17f1720, event=0x7fff26ee08d0, alienWidget=0x17f1720, nativeWidget=0x1919360, buttonDown=0x17f1720, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#25 0x00007ff4674c1945 in QETWidget::translateMouseEvent (this=0x1919360, event=<optimized out>) at kernel/qapplication_x11.cpp:4568
#26 0x00007ff4674c08be in QApplication::x11ProcessEvent (this=0x93b3d0, event=0x7fff26ee10f0) at kernel/qapplication_x11.cpp:3690
#27 0x00007ff4674e9412 in x11EventSourceDispatch (s=0x945c20, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0x00007ff45f454a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007ff45f455258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007ff45f455429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007ff4680bbed6 in QEventDispatcherGlib::processEvents (this=0x8c7f40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#32 0x00007ff4674e907e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007ff46808fcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007ff46808fef7 in QEventLoop::exec (this=0x7fff26ee14c0, flags=...) at kernel/qeventloop.cpp:201
#35 0x00007ff468094789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0x00007ff46b1d41a3 in kdemain (argc=1, argv=0x7fff26ee18a8) at ../../../../plasma/desktop/shell/main.cpp:120
#37 0x00007ff46ae1530d in __libc_start_main (main=0x400640 <main(int, char**)>, argc=1, ubp_av=0x7fff26ee18a8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff26ee1898) at libc-start.c:226
#38 0x0000000000400671 in _start ()
Comment 4 Christoph Feck 2011-10-18 10:44:04 UTC
Git commit 38ee8d60f8da4abc050dcef9fc6b4a6b46d5ceca by Christoph Feck.
Committed on 18/10/2011 at 12:44.
Pushed by cfeck into branch 'KDE/4.7'.

Fix crash when no pattern is selected

BUG: 284331
FIXED-IN: 4.7.3

M  +1    -1    wallpapers/pattern/pattern.cpp

http://commits.kde.org/kdeplasma-addons/38ee8d60f8da4abc050dcef9fc6b4a6b46d5ceca
Comment 5 Christoph Feck 2011-10-18 10:46:45 UTC
Git commit 319f2d154d054b93a4181bf6e468e193218109af by Christoph Feck.
Committed on 18/10/2011 at 12:44.
Pushed by cfeck into branch 'master'.

Fix crash when no pattern is selected

BUG: 284331
FIXED-IN: 4.7.3
(cherry picked from commit 38ee8d60f8da4abc050dcef9fc6b4a6b46d5ceca)

M  +1    -1    wallpapers/pattern/pattern.cpp

http://commits.kde.org/kdeplasma-addons/319f2d154d054b93a4181bf6e468e193218109af