Fix crash when no pattern is selected

BUG: 284331
FIXED-IN: 4.7.3
(cherry picked from commit 38ee8d60f8da4abc050dcef9fc6b4a6b46d5ceca)